5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1633_2920.log
== TEST (2019-04-02 19:10:25) 
-- CODE:
gramas_prato= float(input("quantidade de gramas"))
quantidade_de_bebidas= float(input("quantiade de bebidas"))
quantidade_de_sobremesas= float(input("quantidade de sobremesas"))
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:10:29) 
-- CODE:
gramas_prato= float(input("quantidade de gramas"))
quantidade_de_bebidas= float(input("quantiade de bebidas"))
quantidade_de_sobremesas= float(input("quantidade de sobremesas"))
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:15:43) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(gb*v2)+(qs*v3)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    p=(gp*v1)+(gb*v2)+(qs*v3)
NameError: name 'gb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:16:32) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=float((gp*v1)+(gb*v2)+(qs*v3))
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    p=float((gp*v1)+(gb*v2)+(qs*v3))
NameError: name 'gb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:05) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(p)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:22) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(p)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:17:37) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(p)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:17:50) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(p)
-- EXECUTION TIME:
0.137896
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.105628
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.964907
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.076440999999999
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:01) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(p)
-- OUTPUT:
24.105628
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 19:18:42) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(round(p, 2))
-- OUTPUT:
24.11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 19:18:49) 
-- CODE:
gp= float(input("quantidade de gramas"))
qb= float(input("quantiade de bebidas"))
qs= float(input("quantidade de sobremesas"))
v1= 26.90/1000
v2= 3.50
v3= 3.00
p=(gp*v1)+(qb*v2)+(qs*v3)
print(round(p, 2))
-- EXECUTION TIME:
0.226352
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
24.11
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
13.96
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
9.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
